<resources>
    <string name="app_name">My Money Manager</string>
    <string name="title">Title</string>
    <string name="income">income</string>
    <string name="outcome">outcome</string>
    <string name="total_money">Total Money</string>
    <string name="profile">profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add">add</string>
    <string name="transaction">Transaksi</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="deleted">item telah di hapus</string>
    <string name="no">tidak</string>
    <string name="cancel">cancel</string>
    <string name="message_cancel">Batalkan Perubahan?</string>
    <string name="message_delete">Hapus data?</string>
    <string name="yes">Ya</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="empty">field tidak boleh kosong</string>
    <string name="added">data telah di tambahkan</string>
    <string name="anda_belum_menambahkan_transaksi">Anda Belum menambahkan transaksi</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register_here">Don\'t have account? Register</string>
    <string name="money_manager">Money Manager</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="zero">0</string>
    <string name="equal">= Rp.</string>
</resources>